--- a/jot down chrome extension/main.css
+++ b/jot down chrome extension/main.css
@@ -1,29 +1,40 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-body{
-    font-family:Arial , Helvetica , sans-serif; 
-    padding:0 20px;
-    margin: 0;
-    box-sizing: border-box;
-    max-width: 500px;
-    min-width: 400px;
-    max-height: 300px;
-    
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0 20px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
-h1{
-    color: green;
-    border: 1px solid green;
-    width: fit-content;
-    padding: 4px;
+
+.container {
+  max-width: 1024px;
+  width: 85%;
+  margin: 0 auto;
+  padding: 1rem;
+  display: flex;
 }
-nav{
-    margin-bottom: 20px;
-    display: inline-block;
+h1 {
+  color: green;
+  border: 1px solid green;
+  width: fit-content;
+  padding: 4px;
+}
+nav {
+  margin-bottom: 20px;
+  display: inline-block;
 }
 /* input style  */
 
-#note-input{
-    width:fit-content;
-    
+#note-input {
+  width: fit-content;
 }
 /* svg{
     
@@ -42,96 +53,107 @@ svg:hover{
 svg:active{
     background-color: rgb(192, 13, 13);
 } */
-.input{
-    display: block;
-    font-size: 15px;
-    border: 1px solid green;
-    width:98%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    letter-spacing: .8px;
-    padding: 4px;
-    color: green;
-    background-color: rgb(224, 245, 224);
+.input {
+  display: block;
+  font-size: 15px;
+  border: 1px solid green;
+  width: 98%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  letter-spacing: 0.8px;
+  padding: 4px;
+  color: green;
+  background-color: rgb(224, 245, 224);
 }
-b{
-    color: red;
+b {
+  color: red;
 }
-label{
-    font-weight: bold;
+label {
+  font-weight: bold;
 }
-#note-title{
-    text-transform:capitalize ;
+#note-title {
+  text-transform: capitalize;
 }
-#note-body{
-    font-family:sans-serif;
+#note-body {
+  font-family: sans-serif;
 }
-button{
-    
-    padding: 6px ;
-    margin-top: 10px;
-    background-color: green;
-    border: 1px solid green;
-    font-weight: bold;
-    color: white;
-    border-radius: 3px;
+button {
+  padding: 6px;
+  margin-top: 10px;
+  background-color: green;
+  border: 1px solid green;
+  font-weight: bold;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
 }
 #del-btn {
-    
-    background-color:transparent;
-    border: 1px solid rgb(172, 9, 9);
-    color: rgb(226, 16, 16);
+  background-color: transparent;
+  border: 1px solid rgb(172, 9, 9);
+  color: rgb(226, 16, 16);
 }
 
-#test-delbtn , .test-delbtn{
-    background-color: rgb(172, 9, 9);
-    border: 1px solid rgb(172, 9, 9);
+#test-delbtn,
+.test-delbtn {
+  background-color: rgb(172, 9, 9);
+  border: 1px solid rgb(172, 9, 9);
 }
-#del-btn:hover ,#test-delbtn:hover , .test-delbtn:hover{
-    background-color: rgb(224, 42, 42);
-    color: white;
+#del-btn:hover,
+#test-delbtn:hover,
+.test-delbtn:hover {
+  background-color: rgb(224, 42, 42);
+  color: white;
 }
-#del-btn:active , #test-delbtn:active , .test-delbtn:active {
-    background-color: rgb(172, 9, 9);
+#del-btn:active,
+#test-delbtn:active,
+.test-delbtn:active {
+  background-color: rgb(172, 9, 9);
 }
-#note-input {  
-    /* width: inherit; */
-    width:99%;
+#note-input {
+  /* width: inherit; */
+  width: 99%;
 }
-#add-btn{
-    width: 100%;
-}
-button:hover{
-    background-color: rgb(22, 172, 17);
-}
-button:active{
-    background-color: rgb(10, 156, 10);
+#add-btn {
+  width: 100%;
 }
 
 /* hr{   
     width:inherit ;
 } */
 
-
-
+.content {
+  flex: 1;
+}
 /* redering style */
 
-#notes-box{
-max-height: 400px;
-overflow-y: scroll;
+#notes-box {
+  padding: 1rem;
+  flex: 1;
+  max-height: 400px;
+  overflow-y: scroll;
 }
-.new-note{ 
-    position: relative;
-    padding:4px 8px;
-    margin: 8px 0 ;
-    background-color: rgb(197, 241, 197);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+#notes-box::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.2);
 }
-h4{
-    text-transform: capitalize;
-    margin-top: 2px;
+#notes-box::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
 }
-p{
-    margin-top: -15px;
-    margin-bottom: 4px;
 
+#notes-box .note {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  border-radius: 0.4rem;
+  margin-bottom: 1rem;
+}
+
+.note h4 {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.note button {
+  background-color: crimson;
+  border-color: crimson;
 }
